--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/pro-regular-svg-icons": "^6.4.2",
     "@fortawesome/pro-solid-svg-icons": "^6.4.2",
     "@fortawesome/pro-thin-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/sharp-light-svg-icons": "^6.4.2",
     "@fortawesome/sharp-regular-svg-icons": "^6.4.2",
     "@fortawesome/sharp-solid-svg-icons": "^6.4.2",
