--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/sharp-regular-svg-icons": "^6.4.2",
     "@fortawesome/sharp-solid-svg-icons": "^6.4.2",
     "breakpoint-sass": "^3.0.0",
+    "eslint-config-wesbos": "^3.2.3",
     "next": "13.5.6",
     "next-drupal": "^1.6.0",
     "normalize.css": "^8.0.1",
