--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.4"
+    "sass": "^1.69.4",
+    "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
     "@types/node": "20.8.7",
