--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint:next": "next lint",
     "lint": "eslint .",
@@ -26,6 +27,7 @@
     "eslint-config-wesbos": "^3.2.3",
     "next": "13.5.6",
     "next-drupal": "^1.6.0",
+    "next-sitemap": "^4.2.3",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18",
