--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # See https://next-drupal.org/docs/environment-variables
 NEXT_PUBLIC_DRUPAL_BASE_URL=https://dev.next-drupal.org
 NEXT_IMAGE_DOMAIN=dev.next-drupal.org
+NEXT_PUBLIC_FATHOM_ID=FOO
 
 # Required for On-demand Revalidation
 DRUPAL_REVALIDATE_SECRET=secret
