--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/sharp-solid-svg-icons": "^6.4.2",
     "breakpoint-sass": "^3.0.0",
     "eslint-config-wesbos": "^3.2.3",
+    "fathom-client": "^3.6.0",
     "next": "13.5.6",
     "next-drupal": "^1.6.0",
     "next-sitemap": "^4.2.3",
