--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 NEXT_PUBLIC_DRUPAL_BASE_URL=https://dev.next-drupal.org
 NEXT_IMAGE_DOMAIN=dev.next-drupal.org
 NEXT_PUBLIC_FATHOM_ID=FOO
+YOUTUBE_API_KEY=00000
 
 # Required for On-demand Revalidation
 DRUPAL_REVALIDATE_SECRET=secret
