--- a/package.json
+++ b/package.json
@@ -19,29 +19,30 @@
     "@fortawesome/pro-regular-svg-icons": "^6.5.2",
     "@fortawesome/pro-solid-svg-icons": "^6.5.2",
     "@fortawesome/pro-thin-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@fortawesome/sharp-light-svg-icons": "^6.5.2",
     "@fortawesome/sharp-regular-svg-icons": "^6.5.2",
     "@fortawesome/sharp-solid-svg-icons": "^6.5.2",
     "breakpoint-sass": "^3.0.0",
     "eslint-config-wesbos": "^4.0.1",
-    "fathom-client": "^3.6.0",
-    "next": "14.2.3",
+    "fate-product-list": "github:fate-srd/fate-product-list",
+    "fathom-client": "^3.7.0",
+    "next": "14.2.4",
     "next-drupal": "^1.6.0",
     "next-sitemap": "^4.2.3",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.77.1",
+    "sass": "^1.77.6",
     "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
-    "@types/node": "20.12.11",
-    "@types/react": "18.3.2",
+    "@types/node": "20.14.9",
+    "@types/react": "18.3.3",
     "autoprefixer": "^10",
     "eslint": "^9",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3"
   }
