--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint:next": "next lint",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "postinstall": "./scripts/postInstall.sh"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -31,9 +32,11 @@
     "next-drupal": "^1.6.0",
     "next-sitemap": "^4.2.3",
     "normalize.css": "^8.0.1",
+    "papaparse": "^5.4.1",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-papaparse": "^4.4.0",
     "sass": "^1.77.6",
     "universal-cookie": "^7.1.4"
   },
