--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18",
     "react-papaparse": "^4.4.0",
     "sass": "^1.77.6",
+    "sharp": "^0.33.5",
     "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
