--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-sitemap": "^4.2.3",
     "normalize.css": "^8.0.1",
     "papaparse": "^5.4.1",
+    "patreon": "^0.4.1",
     "prop-types": "^15.8.1",
     "react": "^19",
     "react-dom": "^19",
