--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@fortawesome/sharp-regular-svg-icons": "^6.5.2",
     "@fortawesome/sharp-solid-svg-icons": "^6.5.2",
     "breakpoint-sass": "^3.0.0",
+    "date-fns": "^4.1.0",
     "eslint-config-wesbos": "^4.0.1",
     "fate-product-list": "github:fate-srd/fate-product-list",
     "fathom-client": "^3.7.0",
+    "gray-matter": "^4.0.3",
     "next": "14.2.4",
     "next-drupal": "^1.6.0",
     "next-sitemap": "^4.2.3",
@@ -37,6 +39,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-papaparse": "^4.4.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "sass": "^1.77.6",
     "sharp": "^0.33.5",
     "universal-cookie": "^7.1.4"
