--- a/package.json
+++ b/package.json
@@ -13,45 +13,47 @@
     "postinstall": "./scripts/postInstall.sh"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/pro-duotone-svg-icons": "^6.5.2",
-    "@fortawesome/pro-light-svg-icons": "^6.5.2",
-    "@fortawesome/pro-regular-svg-icons": "^6.5.2",
-    "@fortawesome/pro-solid-svg-icons": "^6.5.2",
-    "@fortawesome/pro-thin-svg-icons": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/pro-duotone-svg-icons": "^6.7.2",
+    "@fortawesome/pro-light-svg-icons": "^6.7.2",
+    "@fortawesome/pro-regular-svg-icons": "^6.7.2",
+    "@fortawesome/pro-solid-svg-icons": "^6.7.2",
+    "@fortawesome/pro-thin-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@fortawesome/sharp-light-svg-icons": "^6.5.2",
-    "@fortawesome/sharp-regular-svg-icons": "^6.5.2",
-    "@fortawesome/sharp-solid-svg-icons": "^6.5.2",
+    "@fortawesome/sharp-light-svg-icons": "^6.7.2",
+    "@fortawesome/sharp-regular-svg-icons": "^6.7.2",
+    "@fortawesome/sharp-solid-svg-icons": "^6.7.2",
     "breakpoint-sass": "^3.0.0",
     "date-fns": "^4.1.0",
-    "eslint-config-wesbos": "^4.0.1",
+    "eslint-config-wesbos": "^4.3.2",
     "fate-product-list": "github:fate-srd/fate-product-list",
-    "fathom-client": "^3.7.0",
+    "fathom-client": "^3.7.2",
     "gray-matter": "^4.0.3",
-    "next": "14.2.4",
+    "next": "15.1.4",
     "next-drupal": "^1.6.0",
     "next-sitemap": "^4.2.3",
     "normalize.css": "^8.0.1",
     "papaparse": "^5.4.1",
     "prop-types": "^15.8.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19",
+    "react-dom": "^19",
     "react-papaparse": "^4.4.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "sass": "^1.77.6",
+    "sass": "^1.83.1",
     "sharp": "^0.33.5",
-    "universal-cookie": "^7.1.4"
+    "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
-    "@types/node": "20.14.9",
-    "@types/react": "18.3.3",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "22.10.5",
+    "@types/react": "19.0.3",
     "autoprefixer": "^10",
     "eslint": "^9",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "15.1.4",
     "postcss": "^8",
+    "postcss-import": "^16.1.0",
     "tailwindcss": "^3"
   }
 }
