--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
     "@fortawesome/sharp-light-svg-icons": "^6.7.2",
     "@fortawesome/sharp-regular-svg-icons": "^6.7.2",
     "@fortawesome/sharp-solid-svg-icons": "^6.7.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "breakpoint-sass": "^3.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "eslint-config-wesbos": "^4.3.2",
     "fate-product-list": "github:fate-srd/fate-product-list",
     "fathom-client": "^3.7.2",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.469.0",
     "next": "15.1.4",
     "next-drupal": "^1.6.0",
     "next-sitemap": "^4.2.3",
@@ -43,6 +48,8 @@
     "remark-html": "^16.0.1",
     "sass": "^1.83.1",
     "sharp": "^0.33.5",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
