--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/sharp-regular-svg-icons": "^6.5.2",
     "@fortawesome/sharp-solid-svg-icons": "^6.5.2",
     "breakpoint-sass": "^3.0.0",
+    "dotenv": "^17.2.1",
     "eslint-config-wesbos": "^4.0.1",
     "fate-product-list": "github:fate-srd/fate-product-list",
     "fathom-client": "^3.7.0",
