--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint:next": "next lint",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "postinstall": "./scripts/postInstall.sh",
     "generate:menus": "node scripts/generate-static-menus.mjs"
   },
   "dependencies": {
@@ -47,7 +46,7 @@
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
     "autoprefixer": "^10",
-    "eslint": "^9",
+    "eslint": "8.57.1",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3"
